--- a/stopwatch.html
+++ b/stopwatch.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-
-    <div id="display">00:00:00</div>
-    <div class="btn">
-        <button id="startBtn" onclick="startStopwatch()">Start</button>
-        <button id="pauseBtn" onclick="pauseStopwatch()" disabled>Pause</button>
-        <button id="resetBtn" onclick="resetStopwatch()" disabled>Reset</button>
+    <div class="container">
+        <div id="stopwatch">00s</div>
+        <button id="startBtn">Start</button>
+        <button id="pauseBtn" disabled>Pause</button>
+        <button id="resetBtn">Reset</button>
     </div>
 
 </body>
